service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-management-service
spec:
  selector:
    app: student-management-service
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
