ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
    - host: student.example.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: student-management-service
                port:
                  number: 8080
